Fix .dll build on Windows
Add win32-dll option to LT_INIT.  Add missing libvna_la_LIBADD and
libvna_la_LDFLAGS lines to src/Makefile.am to fix Windows dynamic (.dll)
library build to avoid undefined symbols at dynamic library link time.

--- a/configure.ac
+++ b/configure.ac
@@ -35,7 +35,7 @@ AC_CHECK_FUNCS([insque isascii mkdir random remque strcasecmp strdup vasprintf])
 
 # Init libtool
 AM_PROG_AR
-LT_INIT
+LT_INIT([win32-dll])
 
 # Generate files.
 AC_CONFIG_HEADERS([config.h])
