Fix "Dest dir longer than base dir is not supported"
When building RPMs on older Linux releases such as Centos 7, rpmbuild was
failed (more specifically, a program it calls, /usr/lib/rpm/debugedit
failed) while gathering debug package information, with the message:
"Dest dir longer than base dir is not supported".

This commit avoids the problem (and arguably makes the RPM build more
as would be expected) by letting rpmbuild create its normal BUILD,
BUILDROOT, RPMS and SRPMS directories, rather than flattening most of
them into the rpm directory.

--- a/.gitignore
+++ b/.gitignore
@@ -28,11 +28,11 @@ Makefile.in
 /ltmain.sh
 /m4/
 /missing
-/rpm/libvna-*/
+/rpm/BUILD
+/rpm/BUILDROOT
 /rpm/libvna.spec
-/rpm/libvna-*.src.rpm
-/rpm/root/
-/rpm/x86_64/
+/rpm/RPMS
+/rpm/SRPMS
 /src/convert-parameters
 /src/cscope.out
 /src/SOLT.vnacal
