Move Ubuntu build release from 22.04 to 20.04
Build the debian packages on the older platform for wider compatibility.
Move debhelper-compat version from 13 to 12 to match, and remove
unnecessary dependency on autotools-dev.

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libvna
 Priority: optional
 Maintainer: Scott Guthridge <scott_guthridge@rompromity.net>
-Build-Depends: debhelper-compat (= 13), autotools-dev, libyaml-dev
+Build-Depends: debhelper-compat (= 12), libyaml-dev
 Standards-Version: 4.5.1
 Section: libs
 Homepage: https://github.com/scott-guthridge/libvna
