Move deb and rpm directories into package subdir
To avoid cluttering the top-level directory as we add support for
new package managers, move the packaging stuff into a subdirectory.
We would like to move "debian" into package as well so far haven't been
able to get the debian tools to work when it's not a top-level.

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,6 @@ Makefile.in
 /config.status
 /config.sub
 /configure
-/deb/libvna-*
-/deb/libvna_*.orig.tar.gz
 /depcomp
 /install-sh
 /libtool
@@ -28,13 +26,16 @@ Makefile.in
 /ltmain.sh
 /m4/
 /missing
-/rpm/BUILD
-/rpm/BUILDROOT
-/rpm/libvna.spec
-/rpm/RPMS
-/rpm/SRPMS
+/package/deb/libvna-*
+/package/deb/libvna_*
+/package/rpm/BUILD
+/package/rpm/BUILDROOT
+/package/rpm/libvna.spec
+/package/rpm/RPMS
+/package/rpm/SRPMS
 /src/convert-parameters
 /src/cscope.out
+/src/libvna.pc
 /src/SOLT.vnacal
 /src/tests/test-suite.log
 /src/tests/test-vnacal-apply
