Add pacman support for Windows MSYS UCRT64
This could be extended to work for Arch linux -- need to
make the `depends` line conditional.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ Makefile.in
 /missing
 /package/deb/libvna-*
 /package/deb/libvna_*
+/package/pkg/PKGBUILD
 /package/rpm/BUILD
 /package/rpm/BUILDROOT
 /package/rpm/libvna.spec
