--- a/package/Makefile.am
+++ b/package/Makefile.am
@@ -1,12 +1,15 @@
 ACLOCAL_AMFLAGS= -I m4
 
-SUBDIRS= deb rpm
+SUBDIRS= deb pkg rpm
 
 deb:
 	(cd deb && $(MAKE) $(AM_MAKEFLAGS) $@)
+
+pkg:
+	(cd pkg && $(MAKE) $(AM_MAKEFLAGS) $@)
 
 srcrpm rpm rpms:
 	(cd rpm && $(MAKE) $(AM_MAKEFLAGS) $@)
 
 
-.PHONY: deb rpm rpms srcrpm
+.PHONY: deb pkg rpm rpms srcrpm
