Add renormalizing parameter conversions to vnaconv
This commit adds the following new functions:
    vnaconv_stosr()
    vnaconv_stosrn()
    vnaconv_stotr()
    vnaconv_stour()
    vnaconv_ttosr()
    vnaconv_ttotr()
    vnaconv_ttour()
    vnaconv_utosr()
    vnaconv_utotr()
    vnaconv_utour()

plus documentation in the vnaconv(3) man page, and new tests to validate
them.

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ Makefile.in
 /src/tests/test-vnacommon-qrsolve2
 /src/tests/test-vnaconv-2x2
 /src/tests/test-vnaconv-3x3
+/src/tests/test-vnaconv-renormalize-2x2
+/src/tests/test-vnaconv-renormalize-NxN
 /src/tests/test-vnadata-basic
 /src/tests/test-vnadata.npd
 /src/tests/test-vnadata.s1p
