--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         buildplat:
-        - { sys: ubuntu-20.04, arch: x86_64 }
+        - { sys: ubuntu-22.04, arch: x86_64 }
         - { sys: windows-2019, arch: x86_64 }
       fail-fast: true
     runs-on: ${{ matrix.buildplat.sys }}
@@ -83,6 +83,8 @@ jobs:
     name: Make Release
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - name: Download Artifacts
       uses: actions/download-artifact@v4
@@ -94,13 +96,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: ${{ github.ref_name }}
+        release_name: Release ${{ github.ref_name }}
         draft: false
         prerelease: false
     - name: Upload Release Assets
-      uses: alexellis/upload-assets@0.4.0
+      uses: alexellis/upload-assets@0.4.1
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         asset_paths: '["artifacts/**/*"]'
