Add support for calkit and data parameters
Add support for common parameterized coaxial short, open, load and
through standards.  Add suppoprt for measured (data) standards given
as network parameter data.

Adds the following new functions:
    vnacal_make_calkit_parameter
	Return a parameter handle for a 1-port (short, open
	or load) calkit standard suitable for handing to
	vnacal_new_add_single_reflect.

    vnacal_make_calkit_parameter_matrix
	Return a matrix of parameter handles for a 1 or 2 port
	calkit standard suitable for handing to vnacal_new_add_*.

    vnacal_make_data_parameter
	Return a parameter handle for a 1-port data standard suitable
	for handing to vnacal_new_add_single_reflect.

    vnacal_make_data_parameter_matrix
	Return a N x N matrix of parameter handles for an N-port data
	standard suitable for handing to vnacal_new_add_*.

    vnacal_eval_parameter
    vnacal_eval_parameter_matrix
	These functions, like the existing vnacal_get_parameter_value
	function, compute the value of a parameter (or values of a matrix
	of parameters) at a given frequency.  But unlike the existing
	function, these take the reference impedance needed by calkit
	and data parameters.

    vnacal_parameter_matrix_to_data
	Evaluate a matrix of parameter handles at a given list of
	frequencies and reference impedance(s) and save the result into
	a vnadata_t structure.	This function is convenient for saving
	solved unknown parameters.

    vnacal_delete_parameter_matrix
	Delete all parameter handles in a given matrix.

--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,20 @@ AC_FUNC_REALLOC
 AC_FUNC_STRTOD
 AC_CHECK_FUNCS([insque isascii mkdir random remque strcasecmp strdup vasprintf])
 
+# Check if binary zero is double zero
+AC_MSG_CHECKING([whether zeroed double is equal to 0.0])
+AC_RUN_IFELSE(
+  [AC_LANG_PROGRAM([#include <string.h>], [
+     double x;
+     memset(&x, 0, sizeof(x));
+     return x == 0.0 ? 0 : 1;
+  ])],
+  [AC_MSG_RESULT(yes)
+   AC_DEFINE([BINARY_ZERO_IS_DOUBLE_ZERO], [1],
+             [Define if a zeroed double is equal to 0.0])],
+  [AC_MSG_RESULT(no)]
+)
+
 # Init libtool
 AM_PROG_AR
 LT_INIT([win32-dll])
