Add vnadata_set_name, vnadata_get_name
The  vnadata_get_name()  and  vnadata_set_name()  functions  provide  a
mechanism  to  get and set a meaningful name for a vnadata_t structure,
such as the name of the device described by the network parameter data.
This  name  is  included in some error messages.  If vnadata_set_name()
has not been called, vnadata_get_name() returns a default name  derived
from  the  filename used in the most recent load or save operation, or,
if no filename is available, from the dimensions of the data matrix.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -78,6 +78,7 @@ libvna_la_SOURCES = archdep.h archdep.c vnacal_internal.h \
 	vnadata_parse_filename.c vnadata_save.c vnadata_set_all_z0.c \
 	vnadata_set_dprecision.c vnadata_set_filetype.c vnadata_set_format.c \
 	vnadata_set_fprecision.c vnadata_set_fz0.c vnadata_set_fz0_vector.c \
+	vnadata_set_name.c \
 	vnadata_set_simple_format.c vnadata_set_z0.c vnadata_set_z0_vector.c \
 	vnadata_update_format_string.c vnaproperty_internal.h vnaproperty.c \
 	vnaproperty_import_yaml_from_string.c \
