Fix test-ubuntu to use workflow dispatch

--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -1,10 +1,6 @@
 name: Test Ubuntu
 
-on:
-  push:
-    branches: [ development ]
-  pull_request:
-    branches: [ development ]
+on: workflow_dispatch
 
 jobs:
   build:
