Revert "Fix test-ubuntu to use workflow dispatch"
This reverts commit a77f82d6593005901d8f12c0d6662ea500fdc083.
Go back to automatic ubuntu build on push to development.

--- a/.github/workflows/test-ubuntu.yml
+++ b/.github/workflows/test-ubuntu.yml
@@ -1,6 +1,10 @@
 name: Test Ubuntu
 
-on: workflow_dispatch
+on:
+  push:
+    branches: [ development ]
+  pull_request:
+    branches: [ development ]
 
 jobs:
   build:
