--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,9 @@ on:
   push:
     tags: [ "v[0-9]*" ]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build assets for ${{matrix.buildplat.sys}} ${{matrix.buildplat.arch}}
